<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/back_tla"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/backgroudn_tlo_border"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tytul_dane_pracownika"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/imie"/>
            <EditText
                android:layout_width="200dp"
                android:id="@+id/imie"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:background="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/nazwisko"/>
            <EditText
                android:layout_width="200dp"
                android:id="@+id/nazwisko"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:background="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/stanowisko"/>
            <Spinner
                android:layout_width="200dp"
                android:id="@+id/stanowisko"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:background="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/backgroudn_tlo_border"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gen_hasla_tekst"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/ile_znak"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:background="@color/white"
                android:id="@+id/ile_znakow"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingLeft="10dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/male_wielkie_litery"
                android:text="@string/male_wielkie_litery"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingLeft="10dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cyfry"
                android:text="@string/cyfry"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingLeft="10dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/znaki_specjalne"
                android:text="@string/znaki_specjalne"/>
        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_gen_haslo"
            android:id="@+id/generuj_haslo"
            android:backgroundTint="@color/kolor_przycisku"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

    </LinearLayout>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        android:id="@+id/zatwierdz"
        android:backgroundTint="@color/kolor_przycisku"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/white"/>
</LinearLayout>